# tracing-aliyun-sls

./: Cargo.toml  README.md
crates/aliyun-sls/: Cargo.toml  README.md
crates/aliyun-sls/src/: lib.rs  proto.rs  reporter.rs
crates/aliyun-sls/src/client/: builder.rs  headers.rs  mod.rs  signer.rs
crates/aliyun-sls/src/client/imp/: mod.rs  nyquest.rs  reqwest.rs
crates/tracing-aliyun-sls/: Cargo.toml
crates/tracing-aliyun-sls/src/: event.rs  format.rs  layer.rs  lib.rs  reporter.rs  tags.rs  time.rs
src/: client.rs  layer.rs  lib.rs  proto.rs
src/builder/: log_comp.rs  mod.rs
