[package]
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage = "https://github.com/lightsing/tracing-aliyun-sls/tree/master/crates/aliyun-sls"
keywords = ["aliyun", "sls"]
license.workspace = true
name = "aliyun-sls"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-channel = { workspace = true, optional = true }
async-lock.workspace = true
base64 = { workspace = true, features = ["alloc"] }
cfg-if.workspace = true
compact_str.workspace = true
futures-util = { workspace = true, optional = true }
hex = { workspace = true, features = ["alloc"] }
hmac.workspace = true
http = { workspace = true, optional = true }
jiff = { workspace = true, features = ["std"] }
litemap.workspace = true
lz4_flex = { workspace = true, optional = true }
md5.workspace = true
miniz_oxide = { workspace = true, optional = true }
nyquest = { workspace = true, optional = true }
nyquest-interface = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
sha1.workspace = true
smallvec = { workspace = true, features = ["litemap"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
ctor.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
nyquest-preset = { workspace = true, features = ["async"] }

[features]
default = ["reqwest-default-tls", "inline-keypairs-8", "inline-tags-8"]

reporter = [
  "dep:async-channel",
  "async-channel/std",
  "futures-util/async-await-macro",
  "futures-util/std",
]

nightly = [
  "smallvec/may_dangle",
]

deflate = ["dep:miniz_oxide"]
lz4 = ["dep:lz4_flex"]

reqwest = ["dep:reqwest", "dep:http"]
reqwest-default-tls = [
  "reqwest",
  "reqwest/rustls-tls",
]
reqwest-rustls = [
  "reqwest",
  "reqwest/rustls-tls",
]

nyquest = ["dep:nyquest", "dep:nyquest-interface", "nyquest/async"]

inline-none = []

inline-keypairs-16 = []
inline-keypairs-2 = []
inline-keypairs-4 = []
inline-keypairs-8 = []

inline-tags-16 = []
inline-tags-2 = []
inline-tags-4 = []
inline-tags-8 = []
